objects/copado__Team__c.object
<CustomObject>
    <fields>
        <fullName>copado__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Capacity</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Core Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Data Center Automation</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Matrix</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Network and Systems Platform</fullName>
                </value>
                <value>
                    <fullName>Path-To-Production</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Production Support</fullName>
                </value>
                <value>
                    <fullName>Productivity</fullName>
                </value>
                <value>
                    <fullName>Programmatic UI</fullName>
                </value>
                <value>
                    <fullName>R&amp;D App Delivery</fullName>
                </value>
                <value>
                    <fullName>Reliability</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Shared Services</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copado__Sprint_Wall_FieldSet_Name__c</fullName>
        <label>Sprint Wall FieldSet Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Vision__c</fullName>
        <label>Vision</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <label>Team</label>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>